test/files/neg/xmltruncated2.check
xmltruncated2.scala:2: error: input ended while parsing XML
  val stuff = <![CDATA[aoeu
                           ^
1 error
